--- a/src/config.h.in
+++ b/src/config.h.in
@@ -37,7 +37,7 @@
 
 #define WMFS_VERSION         "@VERSION@"
 #define WMFS_COMPILE_MACHINE "@CMAKE_SYSTEM_PROCESSOR@"
-#define WMFS_COMPILE_BY      "@ENV{USER}@"
+#define WMFS_COMPILE_BY      "@USERNAME@"
 #define WMFS_COMPILE_FLAGS   "@CMAKE_C_FLAGS@"
 #define WMFS_LINKED_LIBS     "@CMAKE_LINK_LIBRARIES@"
 #define XDG_CONFIG_DIR       "@CMAKE_XDGCONFDIR@"
