--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,7 +153,7 @@ set(WMFS_DOCS
 install(FILES ${WMFS_DOCS} DESTINATION ${CMAKE_DOCDIR})
 
 # config file
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/wmfsrc DESTINATION ${CMAKE_SYSCONFDIR}/${PROJECT_NAME})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/wmfsrc DESTINATION ${CMAKE_XDGCONFDIR}/${PROJECT_NAME})
 
 # xsession
 install(FILES "wmfs.desktop" DESTINATION ${CMAKE_DATADIR}/xsessions)
