wmfs compile with -W -Wall -Wextra (TODO: fix types !!)

--- a/Makefile.in
+++ b/Makefile.in
@@ -32,6 +32,7 @@ src/wmfs.c
 # flags
 CFLAGS+= -DXDG_CONFIG_DIR=\"${XDG_CONFIG_DIR}\"
 CFLAGS+= -DWMFS_VERSION=\"${VERSION}\"
+CFLAGS+= -W -Wall -Wextra -ansi
 
 OBJS= ${SRCS:.c=.o}
 
