--- a/Makefile.in
+++ b/Makefile.in
@@ -60,9 +60,9 @@ install: all
 	@echo installing xsession file to ${DESTDIR}${PREFIX}/share/xsessions
 	mkdir -p ${DESTDIR}${PREFIX}/share/xsessions
 	install -m 644 wmfs.desktop ${DESTDIR}${PREFIX}/share/xsessions/
-	@echo installing default config file to ${DESTDIR}${XDG_CONFIG_DIR}
-	mkdir -p ${DESTDIR}${XDG_CONFIG_DIR}
-	install -m 444 wmfsrc ${DESTDIR}${XDG_CONFIG_DIR}
+	@echo installing default config file to ${DESTDIR}${XDG_CONFIG_DIR}/wmfs/
+	mkdir -p ${DESTDIR}${XDG_CONFIG_DIR}/wmfs/
+	install -m 444 wmfsrc ${DESTDIR}${XDG_CONFIG_DIR}/wmfs/
 
 uninstall:
 	@echo removing executable file from ${DESTDIR}${PREFIX}/bin
@@ -71,8 +71,9 @@ uninstall:
 	rm -f ${DESTDIR}${MANPREFIX}/man1/wmfs.1.gz
 	@echo removing xsession file from ${DESTDIR}${PREFIX}/share/xsessions
 	rm -f ${DESTDIR}${PREFIX}/share/xsessions/wmfs.desktop
-	@echo removing config file from ${DESTDIR}${XDG_CONFIG_DIR}
-	rm -f ${DESTDIR}${XDG_CONFIG_DIR}/wmfsrc
+	@echo removing config file from ${DESTDIR}${XDG_CONFIG_DIR}/wmfs/
+	rm -f ${DESTDIR}${XDG_CONFIG_DIR}/wmfs/wmfsrc
+	rmdir ${DESTDIR}${XDG_CONFIG_DIR}/wmfs/
 
 
 
