--- a/Makefile.in
+++ b/Makefile.in
@@ -19,8 +19,8 @@ src/launcher.c \
 src/layout.c \
 src/menu.c \
 src/mouse.c \
-src/parse/api.c \
-src/parse/parse.c \
+src/parse_api.c \
+src/parse.c \
 src/screen.c \
 src/status.c \
 src/systray.c \
@@ -38,7 +38,7 @@ OBJS= ${SRCS:.c=.o}
 
 all: ${PROG} ${MAN}.gz
 
-${PROG}: ${OBJS} src/structs.h src/wmfs.h src/parse/parse.h
+${PROG}: ${OBJS} src/structs.h src/wmfs.h src/parse.h
 	${CC} -o $@ ${OBJS} ${LDFLAGS}
 
 ${MAN}.gz: ${MAN}
