--- a/Makefile.in
+++ b/Makefile.in
@@ -50,6 +50,10 @@ ${MAN}.gz: ${MAN}
 clean:
 	rm -f ${OBJS} wmfs ${MAN}.gz
 
+distclean: clean
+	rm -f Makefile
+
+
 install: all
 	@echo installing executable file to ${DESTDIR}${PREFIX}/bin
 	mkdir -p ${DESTDIR}${PREFIX}/bin
@@ -77,5 +81,5 @@ uninstall:
 
 
 
-.PHONY: all clean install uninstall
+.PHONY: all clean distclean install uninstall
 
