--- a/Makefile.in
+++ b/Makefile.in
@@ -32,7 +32,7 @@ src/wmfs.c
 # flags
 CFLAGS+= -DXDG_CONFIG_DIR=\"${XDG_CONFIG_DIR}\"
 CFLAGS+= -DWMFS_VERSION=\"${VERSION}\"
-CFLAGS+= -W -Wall -Wextra -ansi
+CFLAGS+= -W -Wall -Wextra
 
 OBJS= ${SRCS:.c=.o}
 
