Add FIFO, FIFO located at : ${TMPDIR}/wmfs-${DISPLAY}.fifo

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,6 +16,7 @@ SRCS=                 \
       src/screen.c    \
       src/tag.c       \
       src/util.c      \
+      src/fifo.c      \
       src/wmfs.c
 
 
