--- a/Makefile.in
+++ b/Makefile.in
@@ -18,6 +18,7 @@ SRCS=                 \
       src/util.c      \
       src/fifo.c      \
       src/status.c    \
+      src/mouse.c     \
       src/wmfs.c
 
 
