Add logging system with warnl, warnxl, errl, errxl

--- a/Makefile.in
+++ b/Makefile.in
@@ -19,6 +19,7 @@ SRCS=                 \
       src/fifo.c      \
       src/status.c    \
       src/mouse.c     \
+      src/log.c       \
       src/wmfs.c
 
 
