! NEW LAUNCHER ! Uicb function 'launcher', new [lauchers] section and 'l' infobarelement. See default wmfsrc please

--- a/Makefile.in
+++ b/Makefile.in
@@ -11,6 +11,7 @@ SRCS=                 \
       src/ewmh.c      \
       src/infobar.c   \
       src/layout.c    \
+      src/launcher.c  \
       src/parse_api.c \
       src/parse.c     \
       src/screen.c    \
